Add BookingService
