# IT/BE/CPMS/BookingService/src/main/java/it/polimi/cpms/bookingservice/model/booking/BookingStatusRepository.java
@@ -1,0 +1,6 @@
+package it.polimi.cpms.bookingservice.model.booking;
+
+import org.springframework.data.repository.CrudRepository;
+
+public interface BookingStatusRepository extends CrudRepository<BookingStatus, Long> {
+}
